--- a/effective_scores_CC.ipynb
+++ b/effective_scores_CC.ipynb
@@ -2,19 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "10cbc38e",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# at the very top of your notebook:\n",
-    "%load_ext autoreload\n",
-    "%autoreload 2\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "48fb3719",
    "metadata": {},
    "outputs": [
@@ -62,14 +50,12 @@
     "    MultilabelStratifiedKFold, MultilabelStratifiedShuffleSplit\n",
     ")\n",
     "\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
-    "from utils import *"
+    "from utils_corrected import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c979232",
    "metadata": {},
    "outputs": [
@@ -96,7 +82,6 @@
     "\n",
     "print(\"test embeddings shape:\", test_embeddings.shape)\n",
     "\n",
-    "#bring in the mlb from pkl \n",
     "with open('{0}_mlb.pkl'.format(ontology_type), 'rb') as f:\n",
     "    mlb = pickle.load(f)\n",
     "\n",
@@ -114,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "c679dd2c",
    "metadata": {},
    "outputs": [
@@ -128,15 +113,9 @@
     }
    ],
    "source": [
-    "#use batched medians and mad \n",
-    "# mad = chunked_mad_over_runs(probs, chunk_size=50)\n",
-    "# median = chunked_median_over_runs(probs, chunk_size=50)\n",
-    "\n",
-    "#open mf_uncertainty_results/arrays/ensemble_20_central.npy\n",
     "with open(r'cc_uncertainty_results/arrays/ensemble_20_central.npy', 'rb') as f:\n",
     "    median = np.load(f, allow_pickle=True)\n",
     "\n",
-    "#mf_uncertainty_results/arrays/ensemble_20_uncertainty.npy\n",
     "with open(r'cc_uncertainty_results/arrays/ensemble_20_uncertainty.npy', 'rb') as f:\n",
     "    mad = np.load(f, allow_pickle=True)\n",
     "\n",
@@ -146,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "915fad16",
    "metadata": {},
    "outputs": [
@@ -234,21 +213,19 @@
     }
    ],
    "source": [
-    "#read in processed_data_90_30/trained_function_ALL_data_ancestors_dict.json\n",
     "with open(r'processed_data_90_30/trained_component_ALL_data_ancestors_dict.json') as f:\n",
     "    trained_function_ALL_data_ancestors_dict = json.load(f)\n",
     "\n",
-    "#TERMS_NOT_IN_test are terms are where 0 in test_labels\n",
     "terms_not_in_test = test_labels.sum(axis=0) == 0\n",
     "terms_not_in_test = np.where(terms_not_in_test)[0]\n",
     "print(\"Number of terms not in test:\", len(terms_not_in_test))\n",
-    "#get the terms from the mlb \n",
+    "\n",
     "terms_not_in_test = mlb.classes_[terms_not_in_test]\n",
     "\n",
     "terms_in_test = test_labels.sum(axis=0) != 0\n",
     "terms_in_test = np.where(terms_in_test)[0]\n",
     "print(\"Number of terms in test:\", len(terms_in_test))\n",
-    "#get the terms from the mlb\n",
+    "\n",
     "terms_in_test = mlb.classes_[terms_in_test]\n",
     "\n",
     "terms_not_in_test, terms_in_test"
@@ -256,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e4f1a89a",
    "metadata": {},
    "outputs": [
@@ -523,36 +500,31 @@
     }
    ],
    "source": [
-    "\n",
-    "#using obonet read in the ontology\n",
     "import obonet\n",
     "go_graph = obonet.read_obo('go-basic.obo')\n",
-    "# Filter to include only GO terms (those starting with 'GO:')\n",
+    "\n",
     "go_graph = nx.subgraph_view(go_graph, filter_node=lambda n: n.startswith(\"GO:\"))\n",
     "\n",
-    "# Get a topological order of GO terms\n",
+    "\n",
     "sorted_go_terms = list(nx.topological_sort(go_graph))\n",
     "\n",
-    "# Create a mapping from GO term to its order index\n",
+    "\n",
     "go_order = {term: idx for idx, term in enumerate(sorted_go_terms)}\n",
     "\n",
-    "# Now, for each ancestor list in your dictionary, sort it based on the GO order.\n",
     "sorted_trained_function_ALL_data_ancestors_dict = {}\n",
     "\n",
     "for term, ancestors in trained_function_ALL_data_ancestors_dict.items():\n",
-    "    # Sort the list of ancestors using the go_order dictionary.\n",
-    "    # Terms not found in go_order will get a default value (e.g., float('inf')).\n",
     "    sorted_ancestors = sorted(ancestors, key=lambda t: go_order.get(t, float('inf')))\n",
     "    sorted_trained_function_ALL_data_ancestors_dict[term] = sorted_ancestors\n",
     "\n",
-    "# To see the sorted ancestor lists:\n",
+    "\n",
     "for term, sorted_ancestors in sorted_trained_function_ALL_data_ancestors_dict.items():\n",
     "    print(f\"{term}: {sorted_ancestors}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "513c6dd7",
    "metadata": {},
    "outputs": [
@@ -1742,14 +1714,13 @@
     }
    ],
    "source": [
-    "#filter sorted_ancestors for mlb.classes_\n",
     "sorted_trained_function_ALL_data_ancestors_dict = {term: [a for a in ancestors if a in mlb.classes_] for term, ancestors in sorted_trained_function_ALL_data_ancestors_dict.items()}\n",
     "sorted_trained_function_ALL_data_ancestors_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "dcdd499a",
    "metadata": {},
    "outputs": [
@@ -1784,7 +1755,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4c7e6dee",
    "metadata": {},
    "outputs": [
@@ -2082,13 +2053,11 @@
     }
    ],
    "source": [
-    "# Define candidate thresholds and target FDR values.\n",
     "candidate_thresholds = np.arange(0.01, 1.0, 0.1)\n",
-    "#target_fdrs are between 0.01 and 0.5 in steps of 0.1 \n",
     "target_fdrs = np.arange(0.01, 0.61, 0.1)\n",
     "\n",
-    "# Define a range of lambda values to try.\n",
-    "lambda_values = np.linspace(0.1, 2.0, 20)  # adjust as needed\n",
+    "\n",
+    "lambda_values = np.linspace(0.1, 2.0, 20)\n",
     "\n",
     "results = {}\n",
     "for lambda_val in tqdm(lambda_values, desc=\"Tuning lambda\"):\n",
@@ -2096,11 +2065,9 @@
     "    results[lambda_val] = valid_count\n",
     "    print(f\"Lambda: {lambda_val:.2f}, Valid terms: {valid_count} out of {test_labels.shape[1]}\")\n",
     "\n",
-    "# Choose lambda that maximizes valid_count.\n",
     "best_lambda = max(results, key=results.get)\n",
     "print(f\"\\nBest lambda is {best_lambda:.2f} with {results[best_lambda]} valid terms.\")\n",
     "\n",
-    "# Plot lambda vs. number of valid terms.\n",
     "plt.plot(list(results.keys()), list(results.values()), marker='o')\n",
     "plt.xlabel(\"Lambda value\")\n",
     "plt.ylabel(\"Number of terms with at least one valid threshold\")\n",
@@ -2110,7 +2077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f01ed67c",
    "metadata": {},
    "outputs": [
@@ -2123,11 +2090,9 @@
     }
    ],
    "source": [
-    "# Define candidate thresholds and target FDRs\n",
     "candidate_thresholds = np.arange(0.01, 1.0, 0.01)\n",
     "target_fdrs = np.arange(0.01, 0.5, 0.01)\n",
     "\n",
-    "# Compute effective thresholds for all terms\n",
     "effective_thresholds = compute_all_effective_thresholds(\n",
     "    median, \n",
     "    mad,\n",
@@ -2141,12 +2106,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "39e5c970",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#replace key names of effective_thresholds with GO terms from mlb.classes_\n",
     "effective_thresholds = {mlb.classes_[k]: v for k, v in effective_thresholds.items()} "
    ]
   },
@@ -2183,19 +2147,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4d40f19a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save effective_thresholds\n",
     "with open('effective_thresholds_ensemble20_{0}.json'.format(ontology_type), 'w') as f:\n",
     "    json.dump(effective_thresholds, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "08acbcbd",
    "metadata": {},
    "outputs": [
@@ -2226,7 +2189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "104bc4ed",
    "metadata": {},
    "outputs": [
@@ -2251,13 +2214,10 @@
     }
    ],
    "source": [
-    "# Load the ensemble_20_metrics.csv file and create the proper DataFrame\n",
-    "ensemble_metrics = pd.read_csv('cc_uncertainty_results/metrics/ensemble_20_metrics.csv')\n",
+    "ensemble_metrics = pd.read_csv('mf_uncertainty_results/metrics/ensemble_20_metrics.csv')\n",
     "\n",
-    "# Create thresholds array matching the uncertainty analysis (0.01 to 0.99 in steps of 0.01)\n",
     "thresholds = np.round(np.arange(0.01, 1.00, 0.01), 2)\n",
     "\n",
-    "# Create the test_df DataFrame with Threshold and FDR columns\n",
     "test_df = pd.DataFrame({\n",
     "    'Threshold': thresholds,\n",
     "    'FDR': ensemble_metrics['fdr'].values\n",
@@ -2267,7 +2227,6 @@
     "print(f\"Threshold range: {test_df['Threshold'].min():.2f} to {test_df['Threshold'].max():.2f}\")\n",
     "print(f\"FDR range: {test_df['FDR'].min():.4f} to {test_df['FDR'].max():.4f}\")\n",
     "\n",
-    "# Now find global thresholds for desired FDR targets\n",
     "fdr_targets = [0.01, 0.05, 0.10]\n",
     "\n",
     "global_thresholds = {}\n",
@@ -2278,7 +2237,6 @@
     "for k, v in global_thresholds.items():\n",
     "    print(f\"FDR={k:.0%}, threshold ~ {v:.2f}\")\n",
     "    \n",
-    "# Show the actual FDR achieved at each threshold\n",
     "print(\"\\nActual FDR achieved:\")\n",
     "for fdr_target, threshold in global_thresholds.items():\n",
     "    actual_fdr = test_df[test_df['Threshold'] == threshold]['FDR'].iloc[0]\n",
@@ -2287,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "00a80c84",
    "metadata": {},
    "outputs": [
@@ -2303,7 +2261,6 @@
     }
    ],
    "source": [
-    "# Create your DataFrame `df` as before.\n",
     "records = []\n",
     "for term, fdr_dict in effective_thresholds.items():\n",
     "    for target_fdr, thr in fdr_dict.items():\n",
@@ -2315,7 +2272,6 @@
     "            })\n",
     "tmp_df = pd.DataFrame(records)\n",
     "\n",
-    "# Sort the unique FDR values.\n",
     "sorted_fdrs = sorted(tmp_df[\"FDR\"].unique())\n",
     "\n",
     "plt.figure(figsize=(12, 5),dpi=300)\n",
@@ -2329,14 +2285,11 @@
     "    medianprops=dict(color=\"white\"),\n",
     "    showfliers=False\n",
     ")\n",
-    "# global_thresholds = {0.05: 0.92, 0.10: 0.60, 0.20: 0.34}\n",
-    "# Suppose global_thresholds is a dict like {0.05: 0.42, 0.10: 0.13, 0.20: 0.02}\n",
-    "colors = ['red', 'green', 'purple']  # pick colors you like\n",
+    "colors = ['red', 'green', 'purple']  \n",
     "for (fdr_t, thr), c in zip(global_thresholds.items(), colors):\n",
     "    plt.axhline(y=thr, color=c, linestyle='-', linewidth=3,\n",
     "                label=f'Global FDR={fdr_t} (thr={thr:.2f})')\n",
     "\n",
-    "# Customize x-ticks\n",
     "x_ticks = np.arange(0, len(sorted_fdrs), 1)\n",
     "plt.xticks(x_ticks, [f\"{float(fdr):.2f}\" for fdr in sorted_fdrs], rotation=90)\n",
     "\n",
@@ -2344,10 +2297,8 @@
     "plt.xlabel(\"\\nTarget FDR\")\n",
     "plt.ylabel(\"Effective threshold\")\n",
     "\n",
-    "# Place legend outside the plot\n",
     "plt.legend(loc='upper left', bbox_to_anchor=(1.05, 1), borderaxespad=0.)\n",
     "\n",
-    "# Adjust layout to avoid clipping\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
