--- a/effective_scores_MF.ipynb
+++ b/effective_scores_MF.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "48fb3719",
    "metadata": {},
    "outputs": [
@@ -50,14 +50,12 @@
     "    MultilabelStratifiedKFold, MultilabelStratifiedShuffleSplit\n",
     ")\n",
     "\n",
-    "# %load_ext autoreload\n",
-    "# %autoreload 2\n",
-    "from utils import *"
+    "from utils_corrected import *"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "2c979232",
    "metadata": {},
    "outputs": [
@@ -92,13 +90,11 @@
     "test_embeddings_path = r'processed_data_90_30/{0}_test.npy'.format(ontology_type)\n",
     "test_tsv_path = r'processed_data_90_30/{0}_test.tsv'.format(ontology_type)\n",
     "\n",
-    "\n",
     "test_embeddings = np.load(test_embeddings_path)\n",
     "test_GO_df, test_embeddings, test_GO_list, test_GO_annotated = process_GO_data(test_tsv_path, test_embeddings)\n",
     "\n",
     "print(\"test embeddings shape:\", test_embeddings.shape)\n",
     "\n",
-    "#bring in the mlb from pkl \n",
     "with open('{0}_mlb.pkl'.format(ontology_type), 'rb') as f:\n",
     "    mlb = pickle.load(f)\n",
     "\n",
@@ -116,71 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "98062e88",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "FileNotFoundError",
-     "evalue": "[Errno 2] No such file or directory: 'C:\\\\Users\\\\stava\\\\Dropbox\\\\Bridge\\\\mf_publish/k_folds/20'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn [3], line 31\u001b[0m\n\u001b[1;32m     28\u001b[0m fold_options \u001b[38;5;241m=\u001b[39m [\u001b[38;5;241m20\u001b[39m]\n\u001b[1;32m     30\u001b[0m \u001b[38;5;66;03m# base_kwargs should match what PFP expects, e.g. {\"input_dim\":..., \"hidden_dims\":..., ...}\u001b[39;00m\n\u001b[0;32m---> 31\u001b[0m raw_ensembles \u001b[38;5;241m=\u001b[39m \u001b[43mload_kfold_ensembles\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m     32\u001b[0m \u001b[43m    \u001b[49m\u001b[43mkf_root\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mkf_root\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     33\u001b[0m \u001b[43m    \u001b[49m\u001b[43mfold_options\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mfold_options\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     34\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_cls\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mPFP\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     35\u001b[0m \u001b[43m    \u001b[49m\u001b[43mmodel_kwargs\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mbase_kwargs\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m     36\u001b[0m \u001b[43m    \u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mdevice\u001b[49m\n\u001b[1;32m     37\u001b[0m \u001b[43m)\u001b[49m\n\u001b[1;32m     38\u001b[0m ensemble \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mk_folds\u001b[39m\u001b[38;5;124m\"\u001b[39m: raw_ensembles}\n\u001b[1;32m     40\u001b[0m \u001b[38;5;66;03m# now you can pass `ensemble` directly into compute_ensemble_probs()\u001b[39;00m\n",
-      "File \u001b[0;32m~/Dropbox/Bridge/pfp_final_aug_3/utils.py:781\u001b[0m, in \u001b[0;36mload_kfold_ensembles\u001b[0;34m(kf_root, fold_options, model_cls, model_kwargs, device, ckpt_suffix)\u001b[0m\n\u001b[1;32m    778\u001b[0m models: List[Tuple[\u001b[38;5;28mint\u001b[39m, torch\u001b[38;5;241m.\u001b[39mnn\u001b[38;5;241m.\u001b[39mModule]] \u001b[38;5;241m=\u001b[39m []\n\u001b[1;32m    780\u001b[0m \u001b[38;5;66;03m# list & load all checkpoints in k_dir\u001b[39;00m\n\u001b[0;32m--> 781\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m fn \u001b[38;5;129;01min\u001b[39;00m \u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mlistdir\u001b[49m\u001b[43m(\u001b[49m\u001b[43mk_dir\u001b[49m\u001b[43m)\u001b[49m:\n\u001b[1;32m    782\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;129;01mnot\u001b[39;00m fn\u001b[38;5;241m.\u001b[39mendswith(ckpt_suffix):\n\u001b[1;32m    783\u001b[0m         \u001b[38;5;28;01mcontinue\u001b[39;00m\n",
-      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'C:\\\\Users\\\\stava\\\\Dropbox\\\\Bridge\\\\mf_publish/k_folds/20'"
-     ]
-    }
-   ],
-   "source": [
-    "# ontology = 'MFO'\n",
-    "# #read in TUNED_MODEL_ARCHS.json\n",
-    "# with open('TUNED_MODEL_ARCHS.json') as f:\n",
-    "#     TUNED_MODEL_ARCHS = json.load(f)\n",
-    "\n",
-    "# CHOSEN_CONFIG = TUNED_MODEL_ARCHS[ontology]['CHOSEN_CONFIG']\n",
-    "# CHOSEN_CONFIG_ARCH = TUNED_MODEL_ARCHS[ontology]['CHOSEN_CONFIG_ARCH']\n",
-    "# CHOSEN_CONFIG_LOSS = 'Balanced'\n",
-    "# CHOSEN_LEARNING_RATE = TUNED_MODEL_ARCHS[ontology]['CHOSEN_CONFIG_LR']\n",
-    "# CHOSEN_NUM_CLASSES = TUNED_MODEL_ARCHS[ontology]['NUM_CLASSES']\n",
-    "\n",
-    "\n",
-    "# dropout_rate   = 0.3\n",
-    "# hidden_dims    = CHOSEN_CONFIG_ARCH\n",
-    "# input_dim      = 512\n",
-    "# output_dim     = CHOSEN_NUM_CLASSES\n",
-    "# device         = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
-    "\n",
-    "\n",
-    "# base_kwargs    = {\n",
-    "#     'input_dim'   : input_dim,\n",
-    "#     'hidden_dims' : hidden_dims,\n",
-    "#     'output_dim'  : output_dim,\n",
-    "#     'dropout_rate': dropout_rate,\n",
-    "# }\n",
-    "# root_dir     = r\"C:\\Users\\stava\\Dropbox\\Bridge\\mf_publish\"\n",
-    "# kf_root      = os.path.join(root_dir, \"k_folds\")\n",
-    "# fold_options = [20]\n",
-    "\n",
-    "# # base_kwargs should match what PFP expects, e.g. {\"input_dim\":..., \"hidden_dims\":..., ...}\n",
-    "# raw_ensembles = load_kfold_ensembles(\n",
-    "#     kf_root=kf_root,\n",
-    "#     fold_options=fold_options,\n",
-    "#     model_cls=PFP,\n",
-    "#     model_kwargs=base_kwargs,\n",
-    "#     device=device\n",
-    "# )\n",
-    "# ensemble = {\"k_folds\": raw_ensembles}\n",
-    "\n",
-    "# # now you can pass `ensemble` directly into compute_ensemble_probs()\n",
-    "# probs = compute_ensemble_probs(ensemble, test_loader, device)\n",
-    "# probs = probs[20]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "614e6c8a",
    "metadata": {},
    "outputs": [
@@ -194,15 +126,9 @@
     }
    ],
    "source": [
-    "#use batched medians and mad \n",
-    "# mad = chunked_mad_over_runs(probs, chunk_size=50)\n",
-    "# median = chunked_median_over_runs(probs, chunk_size=50)\n",
-    "\n",
-    "#open mf_uncertainty_results/arrays/ensemble_20_central.npy\n",
     "with open(r'mf_uncertainty_results/arrays/ensemble_20_central.npy', 'rb') as f:\n",
     "    median = np.load(f, allow_pickle=True)\n",
     "\n",
-    "#mf_uncertainty_results/arrays/ensemble_20_uncertainty.npy\n",
     "with open(r'mf_uncertainty_results/arrays/ensemble_20_uncertainty.npy', 'rb') as f:\n",
     "    mad = np.load(f, allow_pickle=True)\n",
     "\n",
@@ -212,30 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "532d67eb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(33343, 744)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "effective_score = compute_effective_scores(median,mad)\n",
-    "effective_score = np.clip(effective_score, 0, 1)\n",
-    "effective_score.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "915fad16",
    "metadata": {},
    "outputs": [
@@ -445,21 +348,20 @@
     }
    ],
    "source": [
-    "#read in processed_data_90_30/trained_function_ALL_data_ancestors_dict.json\n",
     "with open(r'processed_data_90_30/trained_function_ALL_data_ancestors_dict.json') as f:\n",
     "    trained_function_ALL_data_ancestors_dict = json.load(f)\n",
     "\n",
-    "#TERMS_NOT_IN_test are terms are where 0 in test_labels\n",
+    "\n",
     "terms_not_in_test = test_labels.sum(axis=0) == 0\n",
     "terms_not_in_test = np.where(terms_not_in_test)[0]\n",
     "print(\"Number of terms not in test:\", len(terms_not_in_test))\n",
-    "#get the terms from the mlb \n",
+    "\n",
     "terms_not_in_test = mlb.classes_[terms_not_in_test]\n",
     "\n",
     "terms_in_test = test_labels.sum(axis=0) != 0\n",
     "terms_in_test = np.where(terms_in_test)[0]\n",
     "print(\"Number of terms in test:\", len(terms_in_test))\n",
-    "#get the terms from the mlb\n",
+    "\n",
     "terms_in_test = mlb.classes_[terms_in_test]\n",
     "\n",
     "terms_not_in_test, terms_in_test"
@@ -467,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "e4f1a89a",
    "metadata": {},
    "outputs": [
@@ -1225,32 +1127,29 @@
    "source": [
     "import obonet\n",
     "go_graph = obonet.read_obo('go-basic.obo')\n",
-    "# Filter to include only GO terms (those starting with 'GO:')\n",
+    "\n",
     "go_graph = nx.subgraph_view(go_graph, filter_node=lambda n: n.startswith(\"GO:\"))\n",
     "\n",
-    "# Get a topological order of GO terms\n",
+    "\n",
     "sorted_go_terms = list(nx.topological_sort(go_graph))\n",
     "\n",
-    "# Create a mapping from GO term to its order index\n",
+    "\n",
     "go_order = {term: idx for idx, term in enumerate(sorted_go_terms)}\n",
     "\n",
-    "# Now, for each ancestor list in your dictionary, sort it based on the GO order.\n",
     "sorted_trained_function_ALL_data_ancestors_dict = {}\n",
     "\n",
     "for term, ancestors in trained_function_ALL_data_ancestors_dict.items():\n",
-    "    # Sort the list of ancestors using the go_order dictionary.\n",
-    "    # Terms not found in go_order will get a default value (e.g., float('inf')).\n",
     "    sorted_ancestors = sorted(ancestors, key=lambda t: go_order.get(t, float('inf')))\n",
     "    sorted_trained_function_ALL_data_ancestors_dict[term] = sorted_ancestors\n",
     "\n",
-    "# To see the sorted ancestor lists:\n",
+    "\n",
     "for term, sorted_ancestors in sorted_trained_function_ALL_data_ancestors_dict.items():\n",
     "    print(f\"{term}: {sorted_ancestors}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "513c6dd7",
    "metadata": {},
    "outputs": [
@@ -5489,7 +5388,6 @@
     }
    ],
    "source": [
-    "#filter sorted_ancestors for mlb.classes_\n",
     "sorted_trained_function_ALL_data_ancestors_dict = {term: [a for a in ancestors if a in mlb.classes_] for term, ancestors in sorted_trained_function_ALL_data_ancestors_dict.items()}\n",
     "sorted_trained_function_ALL_data_ancestors_dict"
    ]
@@ -5613,7 +5511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "4c7e6dee",
    "metadata": {},
    "outputs": [
@@ -5911,13 +5809,11 @@
     }
    ],
    "source": [
-    "# Define candidate thresholds and target FDR values.\n",
     "candidate_thresholds = np.arange(0.01, 1.0, 0.1)\n",
-    "#target_fdrs are between 0.01 and 0.5 in steps of 0.1 \n",
     "target_fdrs = np.arange(0.01, 0.61, 0.1)\n",
     "\n",
-    "# Define a range of lambda values to try.\n",
-    "lambda_values = np.linspace(0.1, 2.0, 20)  # adjust as needed\n",
+    "\n",
+    "lambda_values = np.linspace(0.1, 2.0, 20)\n",
     "\n",
     "results = {}\n",
     "for lambda_val in tqdm(lambda_values, desc=\"Tuning lambda\"):\n",
@@ -5925,11 +5821,9 @@
     "    results[lambda_val] = valid_count\n",
     "    print(f\"Lambda: {lambda_val:.2f}, Valid terms: {valid_count} out of {test_labels.shape[1]}\")\n",
     "\n",
-    "# Choose lambda that maximizes valid_count.\n",
     "best_lambda = max(results, key=results.get)\n",
     "print(f\"\\nBest lambda is {best_lambda:.2f} with {results[best_lambda]} valid terms.\")\n",
     "\n",
-    "# Plot lambda vs. number of valid terms.\n",
     "plt.plot(list(results.keys()), list(results.values()), marker='o')\n",
     "plt.xlabel(\"Lambda value\")\n",
     "plt.ylabel(\"Number of terms with at least one valid threshold\")\n",
@@ -5939,7 +5833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "f01ed67c",
    "metadata": {},
    "outputs": [
@@ -5952,11 +5846,9 @@
     }
    ],
    "source": [
-    "# Define candidate thresholds and target FDRs\n",
     "candidate_thresholds = np.arange(0.01, 1.0, 0.01)\n",
     "target_fdrs = np.arange(0.01, 0.5, 0.01)\n",
     "\n",
-    "# Compute effective thresholds for all terms\n",
     "effective_thresholds = compute_all_effective_thresholds(\n",
     "    median, \n",
     "    mad,\n",
@@ -5970,12 +5862,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "39e5c970",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#replace key names of effective_thresholds with GO terms from mlb.classes_\n",
     "effective_thresholds = {mlb.classes_[k]: v for k, v in effective_thresholds.items()} "
    ]
   },
@@ -6094,12 +5985,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "4d40f19a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#save effective_thresholds\n",
     "with open('effective_thresholds_ensemble20_{0}.json'.format(ontology_type), 'w') as f:\n",
     "    json.dump(effective_thresholds, f)"
    ]
@@ -6137,7 +6027,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "104bc4ed",
    "metadata": {},
    "outputs": [
@@ -6162,13 +6052,10 @@
     }
    ],
    "source": [
-    "# Load the ensemble_20_metrics.csv file and create the proper DataFrame\n",
     "ensemble_metrics = pd.read_csv('mf_uncertainty_results/metrics/ensemble_20_metrics.csv')\n",
     "\n",
-    "# Create thresholds array matching the uncertainty analysis (0.01 to 0.99 in steps of 0.01)\n",
     "thresholds = np.round(np.arange(0.01, 1.00, 0.01), 2)\n",
     "\n",
-    "# Create the test_df DataFrame with Threshold and FDR columns\n",
     "test_df = pd.DataFrame({\n",
     "    'Threshold': thresholds,\n",
     "    'FDR': ensemble_metrics['fdr'].values\n",
@@ -6178,7 +6065,6 @@
     "print(f\"Threshold range: {test_df['Threshold'].min():.2f} to {test_df['Threshold'].max():.2f}\")\n",
     "print(f\"FDR range: {test_df['FDR'].min():.4f} to {test_df['FDR'].max():.4f}\")\n",
     "\n",
-    "# Now find global thresholds for desired FDR targets\n",
     "fdr_targets = [0.01, 0.05, 0.10]\n",
     "\n",
     "global_thresholds = {}\n",
@@ -6189,7 +6075,6 @@
     "for k, v in global_thresholds.items():\n",
     "    print(f\"FDR={k:.0%}, threshold ~ {v:.2f}\")\n",
     "    \n",
-    "# Show the actual FDR achieved at each threshold\n",
     "print(\"\\nActual FDR achieved:\")\n",
     "for fdr_target, threshold in global_thresholds.items():\n",
     "    actual_fdr = test_df[test_df['Threshold'] == threshold]['FDR'].iloc[0]\n",
@@ -6198,7 +6083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "00a80c84",
    "metadata": {},
    "outputs": [
@@ -6214,7 +6099,6 @@
     }
    ],
    "source": [
-    "# Create your DataFrame `df` as before.\n",
     "records = []\n",
     "for term, fdr_dict in effective_thresholds.items():\n",
     "    for target_fdr, thr in fdr_dict.items():\n",
@@ -6226,7 +6110,6 @@
     "            })\n",
     "tmp_df = pd.DataFrame(records)\n",
     "\n",
-    "# Sort the unique FDR values.\n",
     "sorted_fdrs = sorted(tmp_df[\"FDR\"].unique())\n",
     "\n",
     "plt.figure(figsize=(12, 5),dpi=300)\n",
@@ -6240,14 +6123,11 @@
     "    medianprops=dict(color=\"white\"),\n",
     "    showfliers=False\n",
     ")\n",
-    "# global_thresholds = {0.05: 0.92, 0.10: 0.60, 0.20: 0.34}\n",
-    "# Suppose global_thresholds is a dict like {0.05: 0.42, 0.10: 0.13, 0.20: 0.02}\n",
-    "colors = ['red', 'green', 'purple']  # pick colors you like\n",
+    "colors = ['red', 'green', 'purple']  \n",
     "for (fdr_t, thr), c in zip(global_thresholds.items(), colors):\n",
     "    plt.axhline(y=thr, color=c, linestyle='-', linewidth=3,\n",
     "                label=f'Global FDR={fdr_t} (thr={thr:.2f})')\n",
     "\n",
-    "# Customize x-ticks\n",
     "x_ticks = np.arange(0, len(sorted_fdrs), 1)\n",
     "plt.xticks(x_ticks, [f\"{float(fdr):.2f}\" for fdr in sorted_fdrs], rotation=90)\n",
     "\n",
@@ -6255,10 +6135,8 @@
     "plt.xlabel(\"\\nTarget FDR\")\n",
     "plt.ylabel(\"Effective threshold\")\n",
     "\n",
-    "# Place legend outside the plot\n",
     "plt.legend(loc='upper left', bbox_to_anchor=(1.05, 1), borderaxespad=0.)\n",
     "\n",
-    "# Adjust layout to avoid clipping\n",
     "plt.tight_layout()\n",
     "plt.show()\n"
    ]
