--- a/generate_counts_FINAL.ipynb
+++ b/generate_counts_FINAL.ipynb
@@ -1266,7 +1266,7 @@
     "print(\"The difference in average % fully annotated between curated_only and 0.3 is: \"\n",
     "      f\"{average_pct_fully_0_3 - average_pct_fully:.2f}%\")\n",
     "print(\"The difference in average % unannotated between curated_only and 0.3 is: \"\n",
-    "      f\"{average_pct_unannotated_0_3 - average_pct_unannotated:.2f}%\")"
+    "      f\"{average_pct_unannotated_0_3 - average_pct_unannotated:.2f}%\")python query_go_terms_enhanced.pypython query_go_terms_enhanced.pypython query_go_terms_enhanced.pypython query_go_terms_enhanced.pypython query_go_terms_enhanced.pypython query_pypsdfasdfimport import imporimroijadsfajsdfimimimimimimimrrwerwerwerwersdfsdfsdfsfsdfdfdfdfdfTadfadfasdfasdfasdfasdfasdfasdfasdf"
    ]
   },
   {
