--- a/src/tune_architecture/CC_architecture_tune.ipynb
+++ b/src/tune_architecture/CC_architecture_tune.ipynb
@@ -90,20 +90,9 @@
     "    Evaluates precision, recall, F1-score, remaining uncertainty (ru), and misinformation (mi)\n",
     "    for a given set of real and predicted annotations using the IC dictionary.\n",
     "\n",
-    "    Parameters:\n",
     "    ic_dict: Dictionary mapping GO terms to IC values\n",
     "    real_annots: List of true annotations for each protein\n",
     "    pred_annots: List of predicted annotations for each protein\n",
-    "    \n",
-    "    Returns:\n",
-    "    f (float): F1-score\n",
-    "    p (float): Precision\n",
-    "    r (float): Recall\n",
-    "    s (float): Combined ru and mi metric\n",
-    "    ru (float): Remaining uncertainty (false negatives)\n",
-    "    mi (float): Misinformation (false positives)\n",
-    "    fps (list): False positives per protein\n",
-    "    fns (list): False negatives per protein\n",
     "    \"\"\"\n",
     "    total = 0\n",
     "    p_sum = 0.0\n",
@@ -113,7 +102,7 @@
     "    mi = 0.0\n",
     "    fps = []\n",
     "    fns = []\n",
-    "    tp_global, fp_global, fn_global = 0, 0, 0  # Micro-averaging variables\n",
+    "    tp_global, fp_global, fn_global = 0, 0, 0  \n",
     "    \n",
     "    for i in range(len(real_annots)):\n",
     "        if len(real_annots[i]) == 0:\n",
@@ -127,12 +116,10 @@
     "        fp_global += len(fp)\n",
     "        fn_global += len(fn)\n",
     "        \n",
-    "        # Misinformation (mi) as sum of IC for false positives\n",
     "        for go_id in fp:\n",
     "            if go_id in ic_dict:\n",
     "                mi += ic_dict[go_id]\n",
     "        \n",
-    "        # Remaining uncertainty (ru) as sum of IC for false negatives\n",
     "        for go_id in fn:\n",
     "            if go_id in ic_dict:\n",
     "                ru += ic_dict[go_id]\n",
@@ -141,7 +128,6 @@
     "        fns.append(fn)\n",
     "        total += 1\n",
     "        \n",
-    "        # Recall and precision per protein\n",
     "        recall = len(tp) / (len(tp) + len(fn)) if (len(tp) + len(fn)) > 0 else 0\n",
     "        precision = len(tp) / (len(tp) + len(fp)) if (len(tp) + len(fp)) > 0 else 0\n",
     "        \n",
@@ -150,24 +136,18 @@
     "            p_total += 1\n",
     "            p_sum += precision\n",
     "    \n",
-    "    # Macro-averaged precision and recall\n",
     "    r = r_sum / total if total > 0 else 0\n",
     "    p = p_sum / p_total if p_total > 0 else 0\n",
     "    \n",
-    "    # Micro-averaged precision and recall\n",
     "    p_micro = tp_global / (tp_global + fp_global) if (tp_global + fp_global) > 0 else 0\n",
     "    r_micro = tp_global / (tp_global + fn_global) if (tp_global + fn_global) > 0 else 0\n",
     "    \n",
-    "    # F1-score for macro\n",
     "    f = 2 * p * r / (p + r) if (p + r) > 0 else 0\n",
-    "    # F1-score for micro\n",
     "    f_micro = 2 * p_micro * r_micro / (p_micro + r_micro) if (p_micro + r_micro) > 0 else 0\n",
     "    \n",
-    "    # Average ru and mi over total proteins\n",
     "    ru /= total\n",
     "    mi /= total\n",
     "    \n",
-    "    # Combined metric s (from ru and mi)\n",
     "    s = math.sqrt(ru * ru + mi * mi)\n",
     "    \n",
     "    return f, p, r, s, ru, mi, f_micro, p_micro, r_micro, tp_global, fp_global, fn_global\n",
@@ -182,15 +162,12 @@
     "    Helper function to calculate metrics at a specific threshold.\n",
     "    This is called within parallelization support.\n",
     "\n",
-    "    Parameters:\n",
     "    threshold: The current threshold to evaluate\n",
     "    ic_dict: Dictionary mapping GO terms to IC values\n",
     "    y_true: Ground truth binary annotations (2D array)\n",
     "    y_pred_probs: Prediction probabilities (2D array)\n",
     "    mlb: MultiLabelBinarizer object\n",
-    "    \n",
-    "    Returns:\n",
-    "    result (dict): Dictionary containing all calculated metrics\n",
+    "\n",
     "    \"\"\"\n",
     "    return _calculate_metrics_at_threshold(ic_dict, y_true, y_pred_probs, threshold, mlb)\n",
     "\n",
@@ -199,7 +176,6 @@
     "    \"\"\"\n",
     "    Calculates S-min and F-max over a range of thresholds or at a set threshold.\n",
     "\n",
-    "    Parameters:\n",
     "    ic_dict: Dictionary mapping GO terms to IC values\n",
     "    y_true: Ground truth binary annotations (2D array)\n",
     "    y_pred_probs: Prediction probabilities (2D array)\n",
@@ -208,13 +184,6 @@
     "    mlb: MultiLabelBinarizer object for converting predictions and targets back to sets of terms\n",
     "    n_jobs: Number of parallel jobs\n",
     "    \n",
-    "    Returns:\n",
-    "    smin (float): The minimum combined metric s\n",
-    "    fmax (float): The maximum F1-score\n",
-    "    best_threshold_s (float): The threshold that gave the best s\n",
-    "    best_threshold_f (float): The threshold that gave the best F1-score\n",
-    "    s_at_fmax (float): The S-min value at the threshold that gave the best F1-score\n",
-    "    results_df (pd.DataFrame): DataFrame containing detailed metrics for each threshold\n",
     "    \"\"\"\n",
     "    \n",
     "    if threshold_range is None and set_threshold is None:\n",
@@ -238,10 +207,8 @@
     "    else:\n",
     "        results = [process_threshold(threshold, ic_dict, y_true, y_pred_probs, mlb) for threshold in tqdm(threshold_range, desc='Calculating Smin & Fmax')]\n",
     "\n",
-    "    # Convert results to DataFrame\n",
     "    results_df = pd.DataFrame(results)\n",
     "\n",
-    "    # Track best s and F1\n",
     "    for row in results:\n",
     "        if row['s'] < smin:\n",
     "            smin = row['s']\n",
@@ -249,9 +216,8 @@
     "        if row['f'] > fmax:\n",
     "            fmax = row['f']\n",
     "            best_threshold_f = row['n']\n",
-    "            s_at_fmax = row['s']  # S-min at the threshold with F-max\n",
+    "            s_at_fmax = row['s']  \n",
     "\n",
-    "    # Print F-max, S-min, and S-min at F-max threshold\n",
     "    print(f\"F-max @ Best Threshold ({best_threshold_f}): {fmax}\")\n",
     "    print(f\"S-min @ Best Threshold ({best_threshold_s}): {smin}\")\n",
     "    print(f\"S-min @ F-max Threshold ({best_threshold_f}): {s_at_fmax}\")\n",
@@ -264,34 +230,24 @@
     "    \"\"\"\n",
     "    Helper function to calculate metrics at a specific threshold.\n",
     "\n",
-    "    Parameters:\n",
     "    ic_dict: Dictionary mapping GO terms to IC values\n",
     "    y_true: Ground truth binary annotations (2D array)\n",
     "    y_pred_probs: Prediction probabilities (2D array)\n",
     "    threshold: Specific threshold to calculate metrics\n",
     "    mlb: MultiLabelBinarizer object\n",
-    "    \n",
-    "    Returns:\n",
-    "    result (dict): Dictionary containing all calculated metrics\n",
     "    \"\"\"\n",
-    "    # Convert y_pred_probs to binary predictions based on the threshold\n",
     "    y_pred_binary = (y_pred_probs > threshold).astype(int)\n",
     "\n",
-    "    # Convert binary predictions to the format expected by evaluate_annotations\n",
     "    pred_annotations = mlb.inverse_transform(y_pred_binary)\n",
     "    pred_annots_inverse = [set(item) for item in pred_annotations]\n",
     "    \n",
-    "    # Similarly, ensure test_targets_inverse is in the correct format\n",
     "    test_targets_inverse = mlb.inverse_transform(y_true)\n",
     "    real_annots_inverse = [set(item) for item in test_targets_inverse]\n",
     "\n",
-    "    # Evaluate annotations at this threshold\n",
     "    f, p, r, s, ru, mi, f_micro, p_micro, r_micro, tp_global, fp_global, fn_global = evaluate_annotations(ic_dict, real_annots_inverse, pred_annots_inverse)\n",
     "    \n",
-    "    # Calculate coverage (how many proteins had at least one prediction)\n",
     "    cov = len([1 for preds in pred_annotations if len(preds) > 0]) / len(y_true)\n",
     "    \n",
-    "    # Return metrics for this threshold\n",
     "    return {\n",
     "        'n': threshold, \n",
     "        'tp': tp_global, \n",
